Add premature demo to test implementation

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 	<body>
 
 		<section>
-			
+			<button onclick="clickTest()">Click me!</button>
 		</section>
 		
 	</body>
+	<script src="src/cast.js"></script>
+	<script src="public/demo.js"></script>
 
 </html>
